app-deploy/backend/overlays/dev/temp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: dev-backend-service
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: dev-backend-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: backend-database-credentials
        image: todoappproject.azurecr.io/backend:a9d8a5073b10ec05ef5d6567b3b9b362ba740144
        name: backend
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
      securityContext:
        runAsNonRoot: true
