app-deploy/backend/overlays/dev/ingress-dev-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
  - host: "anishbista60.xyz"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: dev-backend-service
            port:
              number: 8080
